# c-programming-2-semester

./: CMakeLists.txt  README.md
.github/workflows/: build-and-lint.yml
src/: csv_processor.c  csv_processor.h  main.c
tests/: test_all.c
tests/fixtures/: basic.csv  empty_cells.csv  empty_cells.txt  header_only.txt  varying_columns.csv  varying_columns.txt  whitespace.csv  whitespace.txt
